# ProjectileTrajectory

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  doxygen-filter.py  drag_multiplier_analysis.ipynb  golf_ball_drag_analysis.ipynb  main.cpp
include/: Integrators.hpp  constants.hpp  derivative_functions.hpp  golden_section.hpp  integrators.hpp  simulation.hpp  types.hpp
matlab/: projectile_with_drag_optimization.m
src/: Integrators.cpp  compare_integrators.cpp  compare_k_over_m.cpp  constants.hpp  derivative_functions.cpp  example_3d_motion.cpp  golden_section.hpp  integrators.hpp  main.cpp  simulation.cpp  test.cpp  test_adaptive.cpp  test_golf_ball.cpp  test_variable_drag.cpp  test_variable_drag_supersonic.cpp
